      remains \code{detectCores(logical = TRUE)} on that platform.

      \item Reference classes now keep a record of which fields are
      locked.  \code{$lock()} with no arguments returns the names
      of the locked fields.

      \item \code{HoltWinters()} reports a warning rather than an error
      for some optimization failures (where the answer might be a
      reasonable one).

      \item \code{parallel::clusterExport()} now allows specification of
      an environment from which to export.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item On 64-bit Linux systems, \command{configure} now only sets
      \samp{LIBnn} to \code{lib64} if \file{/usr/lib64} exists.  This
      may obviate setting \samp{LIBnn} explicitly on Debian-derived
      systems.

      It is still necessary to set \samp{LIBnn = lib} (or
      \samp{lib32}) for 32-bit builds of \R on a 64-bit OS on those Linux
      distributions capable for supporting that concept.

      \item \command{configure} looks for \file{inconsolata.sty}, and if
      not found adjusts the default \env{R_RD4PDF} to not use it (with a
      warning, since it is needed for high-quality rendering of manuals).
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \command{R CMD INSTALL} will now do a test load for all
      sub-architectures for which code was compiled (rather than just
      the primary sub-architecture).
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item When checking examples under more than one sub-architecture,
      \command{R CMD check} now uses a separate directory
      \file{examples_arch} for each sub-architecture, and leaves the
      output in file \file{pkgname-Ex_arch.Rout}.  Some packages
      expect their examples to be run in a clean directory \dots{}.
     }
   }
   
   \subsection{BUG FIXES}{
    \itemize{
      \item \code{stack()} now gives an error if no vector column is